--- a/style/maze.css
+++ b/style/maze.css
@@ -14,7 +14,7 @@ html, body {
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url(/Images/img1.jpg);
+    background-image: url(../Images/img1.jpg);
     background-attachment: fixed;
     position: relative;
 }
